--- a/ELColorGame/Translations/Base.lproj/InfoPlist.strings
+++ b/ELColorGame/Translations/Base.lproj/InfoPlist.strings
@@ -5,4 +5,4 @@
   Created by tonny on 2018/1/11.
   Copyright © 2018年 EL Passion. All rights reserved.
 */
-"CFBundleDisplayName" = "高频";
+"CFBundleDisplayName" = "SSC Game";
